--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "laravel/framework": "5.0.*"
+    "laravel/framework": "5.0.*",
+    "fzaninotto/faker": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
