--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require-dev": {
     "phpunit/phpunit": "~4.0",
     "mockery/mockery": "~0.8",
-    "guzzlehttp/guzzle": "~4.0"
+    "guzzlehttp/guzzle": ">=4.0"
   },
   "autoload": {
     "psr-4": {
@@ -29,6 +29,5 @@
       "tests/TestCase.php"
     ]
   },
-  "minimum-stability": "dev",
   "license": "MIT"
 }
